--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FigmaEstonia</title>
     <link rel="stylesheet" href="style.css">
+    <title>Formulário de Registro</title>
 </head>
 <body>
-    <header>
-        <h1>Bem-vindo ao FigmaEstonia</h1>
-    </header>
-    <main>
-        <p>Este é um projeto inicial do FigmaEstonia.</p>
-        <button id="clickMeBtn">Clique aqui</button>
-        <div id="output"></div>
-    </main>
+    <h1>Registro de Usuário</h1>
+    <form id="registrationForm">
+        <label for="username">Nome de Usuário:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">Registrar</button>
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
